# fastapi-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
dev/: check.sh  lint.sh
fast-api-backend/: api.py  database.py  local.db  log.py  main.py
fast-api-backend/api_v1/: __init__.py
fast-api-backend/api_v1/crud/: items.py
fast-api-backend/api_v1/models/: __init__.py  item.py
fast-api-backend/api_v1/routers/: items.py
fastapi_backend/: __init__.py  api.py  database.py  log.py  main.py
fastapi_backend/api_v1/: __init__.py
fastapi_backend/api_v1/crud/: items.py
fastapi_backend/api_v1/items/: __init__.py  crud.py  models.py  router.py
fastapi_backend/api_v1/models/: __init__.py  item.py
fastapi_backend/api_v1/routers/: items.py
fastapi_backend/events/: __init__.py
fastapi_backend/events/github/: __init__.py  models.py  router.py
fastapi_backend/models/: __init__.py  github.py  item.py
test/: conftest.py  test_api.py  test_github.py  test_items.py
