[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_backend"]

[project]
name = "fastapi_backend"
version="0.0.0"
description = "Basic fastapi example"
requires-python = ">= 3.11"

dependencies = [
    "sqlalchemy",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "pytest",
  "ruff",
  "httpx",
]
